package usuarios;

public class Visualizador extends Usuario {

  public Visualizador(String nombre, String apellido, Integer edad) {
    super(nombre, apellido, edad);
  }


}